--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,12 +1,17 @@
-body {
-  background-color: #121212;
-  color: #e0e0e0;
+html, body {
+  height: 100%; /* S'assurer que le body prend toute la hauteur */
+  margin: 0; /* Éliminer les marges par défaut */
+  background-color: #121212; /* Fond global */
+  color: #e0e0e0; /* Couleur du texte global */
   font-family: 'Arial', sans-serif;
+}
+
+.App {
+  min-height: calc(100vh - 40px); /* Ajuster la hauteur pour le footer */
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+  flex-direction: column; /* Disposer les éléments en colonne */
+  justify-content: center; /* Centrer verticalement le contenu principal */
+  align-items: center; /* Centrer horizontalement le contenu */
 }
 
 .home, .quiz {
@@ -99,24 +104,22 @@ select:hover {
 .correct-answer {
   color: green;
 }
-.quit-button-mob{display :none;}
 
-.question-number {
-  font-size: 18px;
-  color: #e0e0e0;
-  margin: 10px 0;
-  animation: fadeIn 0.5s; /* Animation d'apparition */
+.quit-button-mob { display: none; }
+
+.footer {
+  background-color: black;
+  color: #e0e0e0; /* Couleur du texte */
+  text-align: center; /* Centrer le texte */
+  padding: 10px 0; /* Espacement vertical */
+  width: 100%; /* Prendre toute la largeur */
+  position: relative; /* Garder la position relative */
 }
-
 
 @media (max-width: 600px) {
   body {
     height: auto; /* Permettre un défilement sur mobile */
     padding: 10px; /* Ajouter un peu d'espace sur les bords */
-    display: flex; /* Utiliser flexbox pour le centrage */
-    flex-direction: column; /* Disposer les éléments en colonne */
-    justify-content: flex-start; /* Aligner en haut pour le défilement */
-    align-items: center; /* Centrer horizontalement */
   }
 
   h1 {
@@ -140,7 +143,6 @@ select:hover {
     position: absolute;
     top: 10px;
     right: 10px;
-  
     font-size: 18px; /* Taille de l'icône */
     background: none;
     border: none;
@@ -181,6 +183,10 @@ select:hover {
 
   .quit-button-mob span {
     display: none; /* Cacher le texte sur mobile */
+  }
+
+  .footer {
+    font-size: 14px; /* Ajuster la taille de la police pour mobile */
   }
 }
 
